JWT Secret Configuration

--- a/.env.stage.dev
+++ b/.env.stage.dev
@@ -3,3 +3,4 @@ DB_PORT=5432
 DB_USERNAME=postgres
 DB_PASSWORD=postgres
 DB_DATABASE=task-management
+JWT_SECRET=Zyt4gV7:P^<p3X7CpJG&9\eh@9"32v7{X9}HvH4vmC_@']GJP3M^*Wr_-:tXaQS
